--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
     "jquery": "^3.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JonWWalsh/Group-CRUD-Project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JonWWalsh/Group-CRUD-Project/issues"
+  },
+  "homepage": "https://github.com/JonWWalsh/Group-CRUD-Project#readme"
 }
